# Simulated-Banking-Platform

./: .dockerignore  .env.coolify.example  .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  SPEC.md  compose.coolify.yaml  compose.production.yaml  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: README.md  errors.py  main.py  seed.py
backend/app/api/: deps.py  pagination.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  account.py  audit_event.py  session.py  transaction.py  transfer.py  user.py
backend/app/schemas/: account.py  admin.py  auth.py  money.py  transaction.py  transfer.py
backend/app/services/: account_service.py  admin_service.py  audit_service.py  auth_service.py  money_service.py  reconciliation.py  transaction_service.py  transfer_service.py
backend/tests/: README.md  conftest.py
backend/tests/api/: test_accounts.py  test_admin_create_customer.py  test_admin_customers.py  test_admin_dashboard.py  test_admin_status.py  test_auth.py  test_authorization.py  test_backend_audit.py  test_csrf.py  test_deposit.py  test_errors.py  test_health.py  test_ownership.py  test_transactions.py  test_transfers.py  test_withdrawal.py
backend/tests/db/: conftest.py  test_concurrency.py  test_migrations.py  test_reconciliation.py  test_seed.py  test_session.py
backend/tests/service/: test_admin_service.py
(+71 files in other folders)
